; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_argcheck.c_mp_arg_parse_all_kw_array.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_argcheck.c_mp_arg_parse_all_kw_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_arg_parse_all_kw_array(i64 %0, i64 %1, i32* %2, i64 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store i64 %0, i64* %7, align 8
  store i64 %1, i64* %8, align 8
  store i32* %2, i32** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %14 = load i64, i64* %8, align 8
  %15 = load i32*, i32** %9, align 8
  %16 = load i64, i64* %7, align 8
  %17 = getelementptr inbounds i32, i32* %15, i64 %16
  %18 = call i32 @mp_map_init_fixed_table(i32* %13, i64 %14, i32* %17)
  %19 = load i64, i64* %7, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = load i64, i64* %10, align 8
  %22 = load i32*, i32** %11, align 8
  %23 = load i32*, i32** %12, align 8
  %24 = call i32 @mp_arg_parse_all(i64 %19, i32* %20, i32* %13, i64 %21, i32* %22, i32* %23)
  ret void
}

declare dso_local i32 @mp_map_init_fixed_table(i32*, i64, i32*) #1

declare dso_local i32 @mp_arg_parse_all(i64, i32*, i32*, i64, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
